# voinux

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml
docs/: SPECIFICATIONS.md
openspec/changes/implement-voice-transcription/: design.md  proposal.md  tasks.md
openspec/changes/implement-voice-transcription/specs/audio-capture/: spec.md
openspec/changes/implement-voice-transcription/specs/cli-interface/: spec.md
openspec/changes/implement-voice-transcription/specs/configuration/: spec.md
openspec/changes/implement-voice-transcription/specs/keyboard-simulation/: spec.md
openspec/changes/implement-voice-transcription/specs/model-management/: spec.md
openspec/changes/implement-voice-transcription/specs/speech-recognition/: spec.md
openspec/changes/implement-voice-transcription/specs/voice-activation/: spec.md
tests/unit/adapters/audio/: test_composite_processor.py  test_silence_trimmer.py
tests/unit/adapters/noise/: __init__.py  test_noisereduce_adapter.py
voinux/: __main__.py
voinux/adapters/audio/: __init__.py  composite_processor.py  silence_trimmer.py  soundcard_adapter.py
voinux/adapters/config/: yaml_adapter.py
voinux/adapters/keyboard/: stdout_adapter.py  xdotool_adapter.py  ydotool_adapter.py
voinux/adapters/models/: model_cache.py
voinux/adapters/noise/: __init__.py  noisereduce_adapter.py
voinux/adapters/stt/: gemini_adapter.py  whisper_adapter.py
voinux/adapters/vad/: webrtc_adapter.py
voinux/application/: api_key_manager.py  factories.py  use_cases.py
voinux/cli/: main.py  privacy.py
voinux/cli/commands/: config.py  model.py  start.py  test.py
voinux/config/: config.py  loader.py  utils.py
voinux/domain/: entities.py  exceptions.py  ports.py  services.py
voinux/gui/: __init__.py  main.py  main_window.py  system_tray.py
voinux/gui/assets/: __init__.py
voinux/gui/widgets/: __init__.py  stats_display.py  waveform.py
